--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,23 +20,23 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: test@example.org
-phone: 888 888 88 88
+email: shaojiemike@mail.ustc.edu.cn
+phone: +86 18073178856
 address:
-  street: 450 Serra Mall
-  city: Stanford
-  region: CA
-  postcode: '94305'
-  country: United States
-  country_code: US
+  street: Huangshan Road, Shushan District
+  city: Hefei
+  region: Anhui
+  postcode: '23000'
+  country: China
+  country_code: CN
 coordinates:
-  latitude: '37.4275'
-  longitude: '-122.1697'
-directions: Enter Building 1 and take the stairs to Office 200 on Floor 2
+  latitude: '31.86'
+  longitude: '117.27'
+directions: Enter Science and Technology Laboratory Building and take the stairs to Office 1411 on Floor 14
 office_hours:
   - 'Monday 10:00 to 13:00'
   - 'Wednesday 09:00 to 10:00'
-appointment_url: 'https://calendly.com'
+appointment_url: 'http://acsa.ustc.edu.cn/'
 contact_links:
   - icon: twitter
     icon_pack: fab
